# v2ray-sub-parse

./: README.md  pyproject.toml
src/: __init__.py
src/core/: base.py  mixins.py  outbounds.py  stream_settings.py
src/core/protocols/: __init__.py  vless.py
src/core/transports/: __init__.py  raw.py
src/parsers/: manager.py
src/parsers/protocols/: vless.py
src/v2ray_sub_parse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/v2ray_sub_parse/core/: base.py  outbounds.py  stream_settings.py
src/v2ray_sub_parse/core/protocols/: vless.py
src/v2ray_sub_parse/core/transports/: raw.py  xhttp.py
src/v2ray_sub_parse/parsers/: manager.py
src/v2ray_sub_parse/parsers/protocols/: vless.py
src/xray.egg-info/: PKG-INFO  SOURCES.txt
tests/: EXAMPLES.md  README.md  __init__.py  conftest.py
tests/parsers/: __init__.py
tests/parsers/protocols/: __init__.py  base_test.py  conftest.py  test_template.py  test_vless.py
